Bug 110833 - [bisected][regression] Android build test failing on matrix.c (-Wformat-security 'format string is not a string literal' error)
Summary: [bisected][regression] Android build test failing on matrix.c (-Wformat-secur...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Pierre-Eric Pelloux-Prayer
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2019-06-03 22:07 UTC by Clayton Craft
Modified: 2019-06-03 23:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2019-06-03 22:07:25 UTC
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:97:38: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
   _mesa_error(ctx, GL_INVALID_ENUM, caller);
                                     ^~~~~~
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:97:38: note: treat the string as an argument to avoid this
   _mesa_error(ctx, GL_INVALID_ENUM, caller);
                                     ^
                                     "%s", 
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:114:42: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
      _mesa_error(ctx, GL_INVALID_VALUE, caller);
                                         ^~~~~~
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:114:42: note: treat the string as an argument to avoid this
      _mesa_error(ctx, GL_INVALID_VALUE, caller);
                                         ^
                                         "%s", 
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:195:44: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
      _mesa_error( ctx,  GL_INVALID_VALUE, caller );
                                           ^~~~~~
vendor/intel/external/project-celadon/mesa/src/mesa/main/matrix.c:195:44: note: treat the string as an argument to avoid this
      _mesa_error( ctx,  GL_INVALID_VALUE, caller );
                                           ^
                                           "%s", 



Bisected to:

commit d2906293c432b1b0519612caed0c50f43044966a
Author: Pierre-Eric Pelloux-Prayer <pierre-eric.pelloux-prayer@amd.com>
Date:   Tue May 7 11:20:51 2019 +0200

    mesa: EXT_dsa add selectorless matrix stack functions
Comment 2 Mark Janes 2019-06-03 23:20:38 UTC
774a088f64e0984411204231ba8647b68f1b35c9
Author:     Mark Janes <mark.a.janes@intel.com>
mesa: Use string literals for format strings


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.